--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-iced = {version="0.13.1", features=["canvas"]}
-iced_aw = { version = "0.12.0", default-features = false, features = ["number_input"] }
-iced_fonts = "0.1.1"
+iced = {version="0.13.1", features=["canvas", "svg"]}
+iced_aw = { version = "0.12.0", default-features = false, features = ["number_input", "menu"] }
+iced_fonts = { version = "0.2.1", features = ["bootstrap"] }
+dark-light = "2.0.0"
