--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ directories = "6.0.0"
 log = "0.4.27"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+serde_repr = "0.1"
 anyhow = "1.0.98"
 env_logger = "0.11.8"
 rfd = "0.15.3"
