--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,21 +1,20 @@
-name: Build release
-
 on:
-  push:
-    tags: [ v* ]
-
-env:
-  RUSTFLAGS: "-Dwarnings"
+  release:
+    types: [created]
 
 jobs:
-  verify-code:
-    name: verify code
+  release:
+    name: release ${{ matrix.target }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        target: [x86_64-pc-windows-gnu, x86_64-unknown-linux-musl]
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@master
+      - name: Compile and release
+        uses: rust-build/rust-build.action@v1.4.5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          submodules: 'true'
-      - uses: dtolnay/rust-toolchain@stable
-      - run: cargo fmt --check
-      - run: rustup target add x86_64-pc-windows-gnu
-      - run: cargo build --release --target x86_64-pc-windows-gnu
+          RUSTTARGET: ${{ matrix.target }}
