give write permission for release action (try 2)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,8 @@ on:
     types: [created]
 
 permissions:
-  content: write
-  
+  contents: write
+
 jobs:
   release:
     name: release ${{ matrix.target }}
