right-click for tile selection in brush mode, move graphics to bottom of panel

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-iced = { version= "0.13.1", features = ["canvas", "svg", "smol", "image", "advanced"] }
+iced = { version= "0.13.1", features = ["canvas", "svg", "smol", "image", "advanced", "lazy"] }
 iced_aw = { version = "0.12.0", default-features = false, features = ["number_input", "menu", "quad"] }
 iced_fonts = { version = "0.2.1", features = ["bootstrap"] }
 dark-light = "2.0.0"
