--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ itertools = "0.14.0"
 png = "0.17.16"
 notify = "8.0.0"
 clap = { version = "4.5.38", features = ["derive"] }
+heuristic-graph-coloring = "0.1.0"
