only include main binary in release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,5 +28,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RUST_TOOLCHAIN: 1.87.0
+          BINARIES: "z3_overworld_editor"
         with:
           RUSTTARGET: ${{ matrix.target }}
